# docs/swagger.json
@@ -44,7 +44,7 @@
                 "summary": "Add a new contact",
                 "parameters": [
                     {
-                        "description": "Contact object that needs to be added",
+                        "description": "Contact object that needs to be added. If you include _id, ensure it is a 24-character string. Alternatively, omit this field from the object, as it will be automatically generated by the database",
                         "name": "contact",
                         "in": "body",
                         "required": true,
@@ -83,8 +83,8 @@
                             "type": "string"
                         }
                     },
-                    "400": {
-                        "description": "Bad request: invalid ID format",
+                    "500": {
+                        "description": "invalid contact",
                         "schema": {
                             "type": "string"
                         }
@@ -121,14 +121,8 @@
                             "type": "string"
                         }
                     },
-                    "400": {
-                        "description": "Bad request: invalid ID format",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Not found: no document found to update",
+                    "500": {
+                        "description": "invalid contact",
                         "schema": {
                             "type": "string"
                         }
