# server/handler.go
@@ -50,7 +50,7 @@ func (h *httpHandlerStruct) GetContactWithPagination(w http.ResponseWriter, r *h
 // @Description Add a new contact to the phone book
 // @Accept json
 // @Produce json
-// @Param contact body definition.Contact true "Contact object that needs to be added"
+// @Param contact body definition.Contact true "Contact object that needs to be added. If you include _id, ensure it is a 24-character string. Alternatively, omit this field from the object, as it will be automatically generated by the database"
 // @Success 200 {string} string "Contact added successfully"
 // @Router /contact [post]
 func (h *httpHandlerStruct) AddContact(w http.ResponseWriter, r *http.Request) {
@@ -71,7 +71,7 @@ func (h *httpHandlerStruct) AddContact(w http.ResponseWriter, r *http.Request) {
 // @Description Deletes a contact by its ID
 // @Param id path string true "Contact ID (24 characters)"
 // @Success 200 {string} string "Message indicating successful deletion"
-// @Failure 400 {string} string "Bad request: invalid ID format"
+// @Failure 500 {string} string "invalid contact"
 // @Router /contact/delete/{id} [delete]
 func (h *httpHandlerStruct) DeleteContact(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
@@ -95,8 +95,7 @@ func (h *httpHandlerStruct) DeleteContact(w http.ResponseWriter, r *http.Request
 // @Param id path string true "Contact ID (24 characters)"
 // @Param contact body definition.Contact true "Contact details to update"
 // @Success 200 {string} string "Message indicating successful update"
-// @Failure 400 {string} string "Bad request: invalid ID format"
-// @Failure 404 {string} string "Not found: no document found to update"
+// @Failure 500 {string} string "invalid contact"
 // @Router /contact/edit/{id} [put]
 func (h *httpHandlerStruct) UpdateContact(w http.ResponseWriter, r *http.Request) {
 	updatedContact, err := h.decodeContact(r.Body)
